--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
-  "name": "speech-to-text-pattern",
-  "version": "0.1.0",
-  "private": true,
+  "name": "nlu-pattern",
+  "version": "0.0.1",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "test": "jest"
   },
+  "jest": {
+    "preset": "jest-puppeteer"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
+    "@carbon/icons-react": "^10.6.1",
+    "@carbon/themes": "^10.9.0",
     "@zeit/next-sass": "^1.0.1",
+    "body-parser": "^1.19.0",
     "carbon-components": "^10.7.4",
     "carbon-components-react": "^7.7.4",
-    "carbon-icons": "^7.0.7",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "next": "9.1.3",
+    "ibm-watson": "^5.2.1",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^9.1.6",
     "node-sass": "^4.13.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "jest": "^24.9.0",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^2.0.0"
   }
 }
