--- a/.gitignore
+++ b/.gitignore
@@ -8,18 +8,13 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
 
 # misc
 .DS_Store
-.env*
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
