--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,27 @@
 language: node_js
 sudo: required
 node_js: 12
-script:
-  #- npm run test
 cache:
   directories:
     - node_modules
-before_deploy:
+env:
+  global:
+    - BX_APP=natural-language-understanding-code-pattern
+    - BX_API=https://api.ng.bluemix.net
+    - BX_ORGANIZATION=WatsonPlatformServices
+    - BX_SPACE=demos
+script:
   - npm run build
+  - npm run test
+  - npm run test:integration
+before_deploy: npm install -g bx-blue-green
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: bx-blue-green-travis
+    on:
+      branch: master
+      repo: watson-developer-cloud/natural-language-understanding-code-pattern
+  - provider: script
+    skip_cleanup: true
+    script: npx semantic-release
