--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "carbon-components": "^10.9.0",
     "carbon-components-react": "^7.9.0",
     "carbon-icons": "^7.0.7",
-    "carbon-themes": "^1.7.0",
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.4.0",
     "node-sass": "^4.13.0",
@@ -56,9 +55,9 @@
     "puppeteer": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-json-tree": "^0.11.2",
     "react-json-view": "^1.19.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "validator": "^12.1.0"
   },
   "prettier": {
     "trailingComma": "all",
