--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "npm run test:components && npm run test:integrations",
     "test:components": "react-scripts test --env=jsdom",
-    "test:integration": "jest test -c test/jest.config.js"
+    "test:integrations": "jest test -c test/jest.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
