--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "morgan": "^1.9.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "start-prod": "node server.js",
+    "dev": "node scripts/start.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "npm run test:components && npm run test:integrations",
     "test:components": "react-scripts test --env=jsdom",
-    "test:integrations": "jest test -c test/jest.config.js"
+    "test:integrations": "jest test -c test/jest.config.js",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
