--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,8 @@ applications:
     buildpacks:
       - sdk-for-nodejs
     path: .
-    command: npm run start-prod
+    command: npm run start
+    instances: 1
     memory: 512M
+    env:
+      NPM_CONFIG_PRODUCTION: false
