fix:Address feedback from Mike
Related to https://github.ibm.com/Watson/developer-experience/issues/7963#issuecomment-17143597

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-secure-only": "^0.2.1",
     "helmet": "^3.21.2",
     "ibm-watson": "^5.2.1",
+    "iso-639-1": "^2.1.0",
     "morgan": "^1.9.1"
   },
   "scripts": {
