docs: Update README with CPD instructions

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
+# Public Cloud and IAM APIKEY
 NATURAL_LANGUAGE_UNDERSTANDING_APIKEY=<COPY-YOUR-API-KEY-HERE>
 NATURAL_LANGUAGE_UNDERSTANDING_URL=https://us-south.natural-language-understanding.watson.cloud.ibm.com
+
+# # Cloud Pak for Data
+# NATURAL_LANGUAGE_UNDERSTANDING_USERNAME=admin
+# NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD=password
+# NATURAL_LANGUAGE_UNDERSTANDING_URL=https://{cpd-url}:{cpd-port}/natural-language-understanding/api
+# NATURAL_LANGUAGE_UNDERSTANDING_AUTH_TYPE=cp4d
+# NATURAL_LANGUAGE_UNDERSTANDING_AUTH_URL=https://{cpd-url}:{cpd-port}/v1/preauth/validateAuth
+# NATURAL_LANGUAGE_UNDERSTANDING_AUTH_TYPE=cp4d
+# NATURAL_LANGUAGE_UNDERSTANDING_AUTH_DISABLE_SSL=true
+# NATURAL_LANGUAGE_UNDERSTANDING_DISABLE_SSL=true
