--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -7,12 +7,13 @@ labels:
 message: |-
   The ${APP_NAME} service has been created in your project.
 
-  For more information about using this quickstart see https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern/tree/master/openshift.
+  For more information about using this quickstart see https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern/tree/master.
 metadata:
   annotations:
+    description: 'An example Node.js application demonstrating the Watson Natural Language Understanding API. For more information about using this template see https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern/tree/master/.'
     iconClass: icon-nodejs
     openshift.io/display-name: Natural Language Understanding Code Pattern
-    openshift.io/documentation-url: https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern/tree/master/openshift
+    openshift.io/documentation-url: https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern/tree/master
     openshift.io/provider-display-name: IBM
     tags: quickstart,nodejs,watson,natural-language-understanding,code-pattern
   name: nlu-code-pattern
@@ -24,8 +25,8 @@ objects:
     spec:
       ports:
         - name: web
-          port: 3000
-          targetPort: 3000
+          port: 5000
+          targetPort: 5000
       selector:
         name: '${APP_NAME}'
   - apiVersion: v1
@@ -51,25 +52,34 @@ objects:
         template.alpha.openshift.io/wait-for-ready: 'true'
       name: '${APP_NAME}'
     spec:
+      source:
+        type: Git
+        git:
+          uri: '${SOURCE_REPOSITORY_URL}'
+          ref: '${SOURCE_REPOSITORY_REF}'
+        contextDir: '${CONTEXT_DIR}'
+      strategy:
+        type: Source
+        sourceStrategy:
+          from:
+            kind: DockerImage
+            name: docker.io/centos/nodejs-12-centos7:latest
+          env:
+            - name: NPM_MIRROR
+              value: '${NPM_MIRROR}'
       output:
         to:
           kind: ImageStreamTag
           name: '${APP_NAME}:latest'
-      source:
-        git:
-          ref: '${SOURCE_REPOSITORY_REF}'
-          uri: '${SOURCE_REPOSITORY_URL}'
-        type: Git
-      strategy:
-        sourceStrategy:
-          from:
-            kind: ImageStreamTag
-            name: nodejs:12
-            namespace: '${NAMESPACE}'
-        type: Source
       triggers:
         - type: ImageChange
         - type: ConfigChange
+        - type: GitHub
+          github:
+            secret: '${GITHUB_WEBHOOK_SECRET}'
+        - type: Generic
+          generic:
+            secret: '${GENERIC_WEBHOOK_SECRET}'
   - apiVersion: v1
     kind: DeploymentConfig
     metadata:
@@ -82,7 +92,7 @@ objects:
       selector:
         name: '${APP_NAME}'
       strategy:
-        type: Recreate
+        type: Rolling
       template:
         metadata:
           labels:
@@ -93,7 +103,7 @@ objects:
             - name: nlu-code-pattern
               image: ' '
               ports:
-                - containerPort: 3000
+                - containerPort: 5000
               env:
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_BEARER_TOKEN
                   value: '${NATURAL_LANGUAGE_UNDERSTANDING_BEARER_TOKEN}'
@@ -108,19 +118,19 @@ objects:
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD
                   value: '${NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD}'
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_AUTH_DISABLE_SSL
-                  value: true
+                  value: 'true'
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_DISABLE_SSL
-                  value: true
+                  value: 'true'
               livenessProbe:
                 httpGet:
                   path: '/health'
-                  port: 3000
+                  port: 5000
                 initialDelaySeconds: 30
                 timeoutSeconds: 3
               readinessProbe:
                 httpGet:
                   path: '/health'
-                  port: 3000
+                  port: 5000
                 initialDelaySeconds: 3
                 timeoutSeconds: 3
               resources:
@@ -150,28 +160,28 @@ parameters:
     required: true
   - displayName: Service URL
     description: The service URL.
-    name: NATURAL_LANGUAGE_UNDERSTANDING_BEARER_URL
+    name: NATURAL_LANGUAGE_UNDERSTANDING_URL
     required: true
 
   # Bearer Token
   - displayName: Cloud Pak for Data bearer token
-    description: Cloud Pak for Data bearer token.
+    description: Cloud Pak for Data bearer token. Use when AUTH_TYPE is bearerToken
     name: NATURAL_LANGUAGE_UNDERSTANDING_BEARER_TOKEN
     required: false
 
   # IAM
   - displayName: IAM apikey
-    description: IBM Cloud IAM apikey from the service instance page.
+    description: IBM Cloud IAM apikey from the service instance page. Use when AUTH_TYPE is iam
     name: NATURAL_LANGUAGE_UNDERSTANDING_APIKEY
     required: false
 
   # CP4D
   - displayName: Cloud Pak for Data username
-    description: Cloud Pak for Data username of user with access to the service instance.
+    description: Cloud Pak for Data username of user with access to the service instance.  Use when AUTH_TYPE is cp4d
     name: NATURAL_LANGUAGE_UNDERSTANDING_USERNAME
     required: false
   - displayName: Cloud Pak for Data password
-    description: Cloud Pak for Data password of user with access to the service instance.
+    description: Cloud Pak for Data password of user with access to the service instance.  Use when AUTH_TYPE is cp4d
     name: NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD
     required: false
 
@@ -186,13 +196,34 @@ parameters:
     displayName: Application Hostname
     name: APPLICATION_DOMAIN
     value: 'nlu-code-pattern'
-  - description: The URL of the repository with your application source code.
+  - name: SOURCE_REPOSITORY_URL
     displayName: Git Repository URL
-    name: SOURCE_REPOSITORY_URL
+    description: The URL of the repository with your application source code.
     required: true
     value: https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern
-  - description:
+  - name: SOURCE_REPOSITORY_REF
+    displayName: Git Reference
+    description:
       Set this to a branch name, tag or other ref of your repository if you
       are not using the default branch.
-    displayName: Git Reference
-    name: SOURCE_REPOSITORY_REF
+  - name: CONTEXT_DIR
+    displayName: Context Directory
+    description:
+      Set this to the relative path to your project if it is not in the root
+      of your repository.
+  - name: GITHUB_WEBHOOK_SECRET
+    displayName: GitHub Webhook Secret
+    description:
+      Github trigger secret.  A difficult to guess string encoded as part
+      of the webhook URL.  Not encrypted.
+    generate: expression
+    from: '[a-zA-Z0-9]{40}'
+  - name: GENERIC_WEBHOOK_SECRET
+    displayName: Generic Webhook Secret
+    description: A secret string used to configure the Generic webhook.
+    generate: expression
+    from: '[a-zA-Z0-9]{40}'
+  - name: NPM_MIRROR
+    displayName: Custom NPM Mirror URL
+    description: The custom NPM mirror URL
+    value: ''
