--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     ]
   },
   "lint-staged": {
-    "./**/*.{js,scss,html,png,yaml,yml}": [
+    "./**/*.{js,scss,html,png}": [
       "npm run build",
       "git add"
     ]
