--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -117,6 +117,8 @@ objects:
                   value: '${NATURAL_LANGUAGE_UNDERSTANDING_USERNAME}'
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD
                   value: '${NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD}'
+                - name: NATURAL_LANGUAGE_UNDERSTANDING_AUTH_URL
+                  value: '${NATURAL_LANGUAGE_UNDERSTANDING_AUTH_URL}'
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_AUTH_DISABLE_SSL
                   value: 'true'
                 - name: NATURAL_LANGUAGE_UNDERSTANDING_DISABLE_SSL
@@ -183,6 +185,10 @@ parameters:
   - displayName: Cloud Pak for Data password
     description: Cloud Pak for Data password of user with access to the service instance.  Use when AUTH_TYPE is cp4d
     name: NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD
+    required: false
+  - displayName: Authorization URL
+    description: The authorization URL. Use when AUTH_TYPE is cp4d
+    name: NATURAL_LANGUAGE_UNDERSTANDING_AUTH_URL
     required: false
 
   - description: The OpenShift Namespace where the ImageStream resides.
