feat(package.json): update dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Public Cloud and IAM APIKEY
 NATURAL_LANGUAGE_UNDERSTANDING_APIKEY=<COPY-YOUR-API-KEY-HERE>
-NATURAL_LANGUAGE_UNDERSTANDING_URL=https://us-south.natural-language-understanding.watson.cloud.ibm.com
+NATURAL_LANGUAGE_UNDERSTANDING_URL=https://api.us-south.natural-language-understanding.watson.cloud.ibm.com
 
 # # Cloud Pak for Data
 # NATURAL_LANGUAGE_UNDERSTANDING_USERNAME=admin
