--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.4.0",
     "lint-staged": "^11.0.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "npm:dart-sass@^1.25.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
     "puppeteer": "^5.3.1",
