--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "npm run test:components && npm run test:integration",
     "test:components": "cross-env CI=true react-scripts test --env=jsdom",
-    "test:integration": "JEST_PUPPETEER_CONFIG='test/jest-puppeteer.config.js' jest test -c test/jest.config.js",
-    "prepare": "husky install"
+    "test:integration": "JEST_PUPPETEER_CONFIG='test/jest-puppeteer.config.js' jest test -c test/jest.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
