Removing git add for the husky pre-commit lint-staged task

--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   },
   "lint-staged": {
     "./**/*.{js,scss,html,png}": [
-      "npm run build",
-      "git add"
+      "npm run build"
     ]
   },
   "devDependencies": {
