--- a/package.json
+++ b/package.json
@@ -54,15 +54,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.4.1",
-    "carbon-components": "^10.41.0",
-    "carbon-components-react": "^7.41.0",
+    "carbon-components": "^10.46.0",
+    "carbon-components-react": "^7.46.0",
     "carbon-icons": "^7.0.7",
-    "concurrently": "^6.2.1",
+    "concurrently": "^6.3.0",
     "husky": "^7.0.2",
-    "jest": "^26.6.0",
+    "jest": "26.6.0",
     "jest-puppeteer": "^6.0.0",
-    "lint-staged": "^11.1.2",
-    "node-sass": "npm:dart-sass@^1.25.0",
+    "lint-staged": "^11.2.3",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
     "puppeteer": "^10.4.0",
@@ -70,7 +69,8 @@
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-scripts": "4.0.3",
-    "validator": "^13.1.17"
+    "sass": "^1.42.1",
+    "validator": "^13.6.0"
   },
   "prettier": {
     "trailingComma": "all",
