--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-rate-limit": "^6.2.1",
     "express-secure-only": "^0.2.1",
     "helmet": "^5.0.2",
+    "husky": "^7.0.4",
     "ibm-watson": "^6.2.2",
     "iso-639-1": "^2.1.13",
     "morgan": "^1.10.0"
@@ -30,7 +31,7 @@
     "extends": "react-app"
   },
   "engines": {
-    "node": "14.x"
+    "node": "^16.0.0"
   },
   "browserslist": {
     "production": [
@@ -58,7 +59,6 @@
     "carbon-components-react": "^7.53.0",
     "carbon-icons": "^7.0.7",
     "concurrently": "^7.0.0",
-    "husky": "^7.0.4",
     "jest": "26.6.0",
     "jest-puppeteer": "^6.1.0",
     "lint-staged": "^12.3.4",
