--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -198,10 +198,10 @@ parameters:
     value: openshift
   - description:
       The exposed hostname that will route to the Node.js service, if left
-      blank a value will be defaulted.
+      commented a value will be defaulted.
     displayName: Application Hostname
     name: APPLICATION_DOMAIN
-    value: 'nlu-code-pattern'
+  #  value: 'nlu-code-pattern'
   - name: SOURCE_REPOSITORY_URL
     displayName: Git Repository URL
     description: The URL of the repository with your application source code.
