openshift build and auth updates
Signed-off-by: Tim Robinson <timroster@gmail.com>

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -59,11 +59,8 @@ objects:
           ref: '${SOURCE_REPOSITORY_REF}'
         contextDir: '${CONTEXT_DIR}'
       strategy:
-        type: Source
-        sourceStrategy:
-          from:
-            kind: DockerImage
-            name: docker.io/centos/nodejs-12-centos7:latest
+        type: Docker
+        dockerStrategy:
           env:
             - name: NPM_MIRROR
               value: '${NPM_MIRROR}'
@@ -206,7 +203,7 @@ parameters:
     displayName: Git Repository URL
     description: The URL of the repository with your application source code.
     required: true
-    value: https://github.com/watson-developer-cloud/natural-language-understanding-code-pattern
+    value: https://github.com/IBM/natural-language-understanding-code-pattern
   - name: SOURCE_REPOSITORY_REF
     displayName: Git Reference
     description:
